feat(tests): enhance CashRegisterServiceTest with additional scenarios and validations